--- a/index.html
+++ b/index.html
@@ -13,28 +13,20 @@
 
   <ol class="list-group">
     <li class="list-group-item">
-      <a href="#" class="icon-link">
-        <i class="icon i-64 i-ankylosaurus"></i>
-        <span class="icon-label">Ankylosaurus</span>
-      </a>
+      <img src="images/ankylosaurus.svg" class="icon i-64"></i>
+      <span class="icon-label">Ankylosaurus</span>
     </li>
     <li class="list-group-item">
-      <a href="#" class="icon-link">
-        <i class="icon i-64 i-hadrosaur"></i>
-        <span class="icon-label">Hadrosaur</span>
-      </a>
+      <img src="images/hadrosaur.svg" class="icon i-64"></i>
+      <span class="icon-label">Hadrosaur</span>
     </li>
     <li class="list-group-item">
-      <a href="#" class="icon-link">
-        <i class="icon i-64 i-stegosaurus"></i>
-        <span class="icon-label">Stegosaurus</span>
-      </a>
+      <img src="images/stegosaurus.svg" class="icon i-64"></i>
+      <span class="icon-label">Stegosaurus</span>
     </li>
     <li class="list-group-item">
-      <a href="#" class="icon-link">
-        <i class="icon i-64 i-triceratops"></i>
-        <span class="icon-label">Triceratops</span>
-      </a>
+      <img src="images/triceratops.svg" class="icon i-64"></i>
+      <span class="icon-label">Triceratops</span>
     </li>
   </ol>
 
