--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
   <h1>Dinosaurs</h1>
 
   <ol class="list-group">
-    <li class="list-group-item">
-      <img src="images/ankylosaurus.svg" class="icon i-64"></i>
+    <li>
+      <i class="icon i-64">
+        <img src="images/ankylosaurus.svg" alt="">
+      </i>
       <span class="icon-label">Ankylosaurus</span>
     </li>
-    <li class="list-group-item">
-      <img src="images/hadrosaur.svg" class="icon i-64"></i>
+    <li>
+      <i class="icon i-64"><img src="images/hadrosaur.svg" alt=""></i>
       <span class="icon-label">Hadrosaur</span>
     </li>
-    <li class="list-group-item">
-      <img src="images/stegosaurus.svg" class="icon i-64"></i>
+    <li>
+      <i class="icon i-64"><img src="images/stegosaurus.svg" alt=""></i>
       <span class="icon-label">Stegosaurus</span>
     </li>
-    <li class="list-group-item">
-      <img src="images/triceratops.svg" class="icon i-64"></i>
+    <li>
+      <i class="icon i-64"><img src="images/triceratops.svg" alt=""></i>
       <span class="icon-label">Triceratops</span>
     </li>
   </ol>
